<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="#F4F3F1">

    <LinearLayout
        android:id="@+id/task_setting_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="B"/>

        <EditText
            android:id="@+id/task_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Task name"
            android:textColor="#000000"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_setting_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/task_setting_1"
        android:background="#FAFAFA">

        <ImageView
            android:background="@drawable/calender_icon_line"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginLeft="30px"/>

        <TextView
            android:id="@+id/show_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textSize="15sp"
            android:textColor="#4A4A4A"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_setting_3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FAFAFA"
        android:layout_below="@+id/task_setting_2">

        <ImageView
            android:background="@drawable/alarm_bell_grey"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30px"
            android:layout_gravity="center"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/show_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/pick_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_time"
            android:textColor="#4A4A4A"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_setting_4"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/task_setting_3"
        android:background="#FAFAFA">
        <ImageView
            android:id="@+id/pencil"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30px"
            android:src="@drawable/note_icon_defult"/>

        <EditText
            android:id="@+id/add_content"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@android:drawable/edit_text"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:gravity="top"
            android:hint="note"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="8"
            android:scrollbars="vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@+id/task_setting_4"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confirm"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>